--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -6,7 +6,8 @@
     <title>{% block title %}Coffee Shop{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap">
     {% block extra_css %}{% endblock %}
     <meta name="csrf-token" content="{{ csrf_token }}">
@@ -43,7 +44,7 @@
                 </a>
             {% endif %}
             <a href="{% url 'order:cart' %}" class="cart">
-                <i class="fas fa-shopping-cart"></i>
+                <i class="bi bi-bag-dash"></i>
                 Sepet 
                 <span class="cart-count">{{ cart_count }}</span>
             </a>
